# fm-bridge

./: .gitignore  CLAUDE.md  Cargo.toml  Gen_Presentacion_Ir.fmscript  MIG_Poblar_TrazabilidadEdge.fmscript  Prueba.fmscript  PruebaWindows.fmscript  SecIte_Asignar_Validacion.fmscript  SecIte_Asignar_Validacion_v2.fmscript  SecIte_ObtenerArticulos.fmscript  SecIte_ObtenerArticulos_v2.fmscript  SecIte_Selec_Conectores.fmscript  fm-bridge.bat  ids.txt  script.fmscript  steps.toml  test_perform_script.fmscript  test_script.fmscript
.github/workflows/: ci.yml  package-extension.yml
docs/: BRANCH_STATUS.md  EVOLUTIONS.md  IA-PROMPT.md  MCP.md  USAGE.md  VISION.md
editors/vscode/: .gitignore  .vscodeignore  LICENSE  README.md  esbuild.js  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/scripts/: bundle-native.js
editors/vscode/snippets/: fmscript.json
editors/vscode/src/: bridge.ts  completion.ts  extension.ts  inspect.ts  mcpConfig.ts  quickfix.ts
editors/vscode/syntaxes/: fmscript.tmLanguage.json
src/: audit.rs  clipboard.rs  fmsavexml.rs  import_records.rs  main.rs  mcp.rs  normalization.rs  ole_clipboard.rs  slice.rs  step_dsl.rs  steps.rs  text_format.rs  xmss.rs  xref.rs
