[package]
name = "fm-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.37"
toml = "0.8"

[target.'cfg(windows)'.dependencies]
clipboard-win = "5"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Memory", "Win32_System_DataExchange", "Win32_System_LibraryLoader"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSString", "NSArray"] }
objc2-app-kit = { version = "0.3", features = ["NSPasteboard"] }
